antiCheatScreen now uses name, works on platforms other than windows, has an added layer of anti-cheat security and added tests